--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,3 +1,15 @@
 spring:
   application:
     name: wisexpense
+  datasource:
+    url: jdbc:postgresql://localhost:5432/wisexpense
+    username: noah
+    password: password
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
+        dialect: org.hibernate.dialect.PostgreSQLDialect
