--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -13,3 +13,8 @@ spring:
       hibernate:
         format_sql: true
         dialect: org.hibernate.dialect.PostgreSQLDialect
+
+plaid:
+  client:
+    id: ${PLAID_CLIENT_ID}
+  secret: ${PLAID_SECRET}
