--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "next-themes": "^0.4.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-plaid-link": "^4.1.1",
     "recharts": "^3.7.0",
     "tailwind-merge": "^3.4.0"
   },
