--- a/.gitignore
+++ b/.gitignore
@@ -1,34 +1,18 @@
-HELP.md
-target/
-.mvn/wrapper/maven-wrapper.jar
-!**/src/main/**/target/
-!**/src/test/**/target/
-
-### STS ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-.sts4-cache
-
-### IntelliJ IDEA ###
-.idea
-*.iws
-*.iml
-*.ipr
-
-### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.egg-info/
+dist/
 build/
-!**/src/main/**/build/
-!**/src/test/**/build/
+*.egg
+.venv/
+venv/
+env/
 
-### VS Code ###
+# IDE
 .vscode/
+.idea/
+
+# Environment
 .env
