--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,10 @@ uvicorn[standard]
 sqlalchemy
 psycopg2-binary
 pydantic-settings
+pydantic[email]
 python-dotenv
 httpx
+plaid-python
+python-jose[cryptography]
+bcrypt
+python-multipart
